# deadbeef-media-library

./: .gitignore  Makefile  README.md  meson.build  quick-install.sh  quick-remove.sh
include/: benchmark.hpp  filebrowser.hpp  librarycontroller.hpp  utils.hpp
include/cache/: cache.hpp
include/cache/covers/implementation/: coveralbum.hpp  covermediafile.hpp
include/gui/: addressbox.hpp  container.hpp  filebrowserfilter.hpp  iconview.hpp  modelcolumns.hpp  searchbar.hpp  treefilebrowser.hpp  treepopup.hpp
include/gui/settings/: pathscolumns.hpp  window.hpp
include/metadata/: reader.hpp  readerfactory.hpp
include/metadata/abstract/: id3v2reader.hpp
include/metadata/implementation/: flacreader.hpp  mp3reader.hpp  oggreader.hpp  wavreader.hpp
include/plugin/: settings.hpp
src/: benchmark.cpp  filebrowser.cpp  librarycontroller.cpp  meson.build  plugin.cpp  utils.cpp
src/cache/covers/implementation/: coveralbum.cpp  covermediafile.cpp
src/gui/: addressbox.cpp  container.cpp  filebrowserfilter.cpp  iconview.cpp  modelcolumns.cpp  searchbar.cpp  treefilebrowser.cpp  treepopup.cpp
src/gui/settings/: pathscolumns.cpp  window.cpp
src/metadata/: reader.cpp  readerfactory.cpp
src/metadata/abstract/: id3v2reader.cpp
src/metadata/implementation/: flacreader.cpp  mp3reader.cpp  oggreader.cpp  wavreader.cpp
src/plugin/: controller.cpp
